добавлен фронт, немного подредачен бэк

--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -14,6 +14,7 @@
         <span class="navbar-text" id="userEmail"></span>
         <span class="navbar-text mx-3" id="userRoles"></span>
         <div class="ms-auto">
+            <a href="cars.html" class="btn btn-secondary">автомобили</a>
             <button class="btn btn-secondary d-none" id="adminPanelBtn">админ-панель</button>
             <button class="btn btn-outline-danger" id="logoutBtn">выйти</button>
         </div>
