добавлены страницы машин пользователя для админа

--- a/frontend/cars.html
+++ b/frontend/cars.html
@@ -12,7 +12,7 @@
         <h1>Отслеживаемые автомобили</h1>
         <div class="ms-auto">
             <a href="profile.html" class="btn btn-secondary">профиль</a>
-            <button class="btn btn-outline-danger" id="logoutBtn">Выйти</button>
+            <button class="btn btn-outline-danger" id="logoutBtn">выйти</button>
         </div>
     </div>
 </nav>
@@ -76,7 +76,7 @@
                         <input type="number" class="form-control" id="mileageBefore">
                     </div>
                     <button type="submit" class="btn btn-primary">Добавить</button>
-                    <span class="loading ms-3">⏳ Добавляется...</span>
+                    <span id="loading" class="loading ms-3">⏳ Добавляется...</span>
                 </form>
             </div>
         </div>
