--- a/frontend/admin_car.html
+++ b/frontend/admin_car.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Детали автомобиля</title>
+    <title>Детали автомобиля пользователя</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
     <div class="container-fluid">
-        <h1>Детали автомобиля</h1>
+        <h1>Детали автомобиля пользователя</h1>
         <div class="ms-auto">
-            <a href="cars.html" class="btn btn-secondary">назад</a>
+            <a href="#" class="btn btn-secondary" id="backBtn">назад</a>
             <button class="btn btn-outline-danger" id="logoutBtn">выйти</button>
         </div>
     </div>
@@ -27,6 +27,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="config.js"></script>
-<script src="car.js"></script>
+<script src="admin_car.js"></script>
 </body>
 </html>
