отредачил фронт после исправления эндпоинтов на бэке

--- a/backend/frontend/cars.html
+++ b/backend/frontend/cars.html
@@ -31,6 +31,7 @@
             <th>Год до</th>
             <th>Пробег от</th>
             <th>Пробег до</th>
+            <th>Действия</th>
         </tr>
         </thead>
         <tbody id="carTableBody">
