--- a/frontend/home.html
+++ b/frontend/home.html
@@ -75,5 +75,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="config.js"></script>
 <script src="home.js"></script>
+<script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="car_price_tracking_bot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+<script type="text/javascript">
+    function onTelegramAuth(user) {
+        alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+    }
+</script>
+
 </body>
 </html>
