--- a/frontend/home.html
+++ b/frontend/home.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://oauth.telegram.org;">
     <title>Application</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
 </head>
@@ -76,12 +75,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="config.js"></script>
 <script src="home.js"></script>
-<script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="car_price_tracking_bot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
-<script type="text/javascript">
-    function onTelegramAuth(user) {
-        alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
-    }
-</script>
-
+<script async src="https://telegram.org/js/telegram-widget.js?22"
+        data-telegram-login="car_price_tracking_bot"
+        data-size="large"
+        data-onauth="onTelegramAuth(user)"></script>
 </body>
 </html>
