--- a/frontend/home.html
+++ b/frontend/home.html
@@ -10,64 +10,13 @@
 <div class="container">
     <h1 class="text-center mt-5">Pre-project-3</h1>
     <div class="text-center mt-5">
-        <button class="btn btn-primary" id="signinBtn">Вход</button>
-        <button class="btn btn-secondary" id="signupBtn">Регистрация</button>
-    </div>
-</div>
-
-<div class="modal fade" id="signinModal" tabindex="-1" aria-labelledby="signinModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="signinModalLabel">Вход</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="signinForm">
-                    <div class="mb-3">
-                        <label for="signinEmail" class="form-label">Почта</label>
-                        <input type="email" class="form-control" id="signinEmail" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="signinPassword" class="form-label">Пароль</label>
-                        <input type="password" class="form-control" id="signinPassword" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Войти</button>
-                </form>
-            </div>
+        <div class="d-flex justify-content-center mt-3">
+            <script async src="https://telegram.org/js/telegram-widget.js?22"
+                    data-telegram-login="car_price_tracking_bot"
+                    data-size="large"
+                    data-onauth="onTelegramAuth(user)"></script>
         </div>
-    </div>
-</div>
 
-<div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="signupModalLabel">Регистрация</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="signupForm">
-                    <div class="mb-3">
-                        <label for="signupName" class="form-label">Имя</label>
-                        <input type="text" class="form-control" id="signupName" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="signupEmail" class="form-label">Почта</label>
-                        <input type="email" class="form-control" id="signupEmail" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="signupPassword" class="form-label">Пароль</label>
-                        <input type="password" class="form-control" id="signupPassword" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="signupAge" class="form-label">Возраст</label>
-                        <input type="number" class="form-control" id="signupAge" min="12" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Создать аккаунт</button>
-                </form>
-            </div>
-        </div>
     </div>
 </div>
 
@@ -75,9 +24,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="config.js"></script>
 <script src="home.js"></script>
-<script async src="https://telegram.org/js/telegram-widget.js?22"
-        data-telegram-login="car_price_tracking_bot"
-        data-size="large"
-        data-onauth="onTelegramAuth(user)"></script>
 </body>
 </html>
